--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -70,7 +70,7 @@
     margin-top:5%;
     margin-left: 5%;
 }
-.main .middle .bottom a{
+.main .middle .bottom button{
     width:22%;
     margin-top:4%;
     margin-left: 5%;
